--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,3 +1,6 @@
+// Custom variables for application
+@import './variables';
+
 // Import Bootstrap and its default variables
 @import 'bootstrap/scss/bootstrap.scss';
 
