--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -2,7 +2,6 @@
     .contact-row .col,
     .main-header .navbar {
         max-width: 1600px;
-        margin: 0 auto;
     }
 
     .contact-row .col {
@@ -23,6 +22,55 @@
     }
 
     .main-header {
-        height: 135px;
+        height: 114px;
+
+        @include media-breakpoint-up(lg) {
+            height: 135px;
+        }
+
+        .container-fluid {
+            @include media-breakpoint-down(lg) {
+                padding-right: 0;
+            }
+        }
+    }
+
+    .navbar-toggler-icon {
+        background: none;
+    }
+
+    .navbar-toggler:focus {
+        box-shadow: none;
+    }
+
+    .header-logo {
+        @include media-breakpoint-down(lg) {
+            width: 205px;
+        }
+    }
+
+    .header-cta {
+        padding: 12px 22px;
+    }
+
+    .offcanvas-body {
+        gap: 20px;
+
+        @include media-breakpoint-up(xxl) {
+            gap: 108px;
+        }
+    }
+
+    .navbar-nav {
+        gap: 10px;
+
+        @include media-breakpoint-down(lg) {
+            margin-bottom: 16px;
+        }
+
+        @include media-breakpoint-up(xxl) {
+            font-size: 20px;
+            gap: 54px;
+        }
     }
 }
