--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -53,6 +53,13 @@
         padding: 12px 22px;
     }
 
+    .offcanvas.offcanvas-end {
+        @include media-breakpoint-down(lg) {
+            width: calc(100% - 50px);
+            max-width: var(--bs-offcanvas-width);
+        }
+    }
+
     .offcanvas-body {
         gap: 20px;
 
