--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,4 +1,5 @@
 .App-header {
+
     .contact-row .col,
     .main-header .navbar {
         max-width: 1600px;
@@ -18,6 +19,11 @@
 
         .contact-mail {
             gap: 5px;
+        }
+
+        .contact-phone,
+        .contact-mail {
+            font-size: 14px;
         }
     }
 
