UI: footer and common component updated for About and Contact pages

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,13 @@
 $primary: #DF4F3A;
 $secondary: #242424;
+
+/*Custom breakpoints*/
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px,
+  xxxl: 1600px
+);
