--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -6,5 +6,7 @@
 
 // Custom styling for application
 @import './fonts/fonts';
+@import './custom';
 @import './partials/header';
 @import './partials/footer';
+@import './partials/sections';
