--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -11,8 +11,12 @@
 }
 
 .h2 {
-    font-size: clamp(1.5rem, -2.5789rem + 6.5789vw, 4rem);
-    line-height: 1.3;
+    font-size: clamp(2rem, -2.5789rem + 6.5789vw, 4rem);
+    line-height: 1.75;
+
+    @include media-breakpoint-up(lg) {
+        line-height: 1.25;
+    }
 }
 
 .mw-1600 {
