UI: Fixes for the responsive design for contact page hero banner as the content is outside the container

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,7 @@ $secondary: #242424;
 $grey-1: #94A1A1;
 
 /*Custom breakpoints*/
+$grid-gutter-width: 48px;
 $grid-breakpoints: (
   xs: 0,
   sm: 576px,
