--- a/src/scss/partials/sections/_heroBanner.scss
+++ b/src/scss/partials/sections/_heroBanner.scss
@@ -17,4 +17,15 @@
         margin-top: 32px;
         margin-bottom: 60px;
     }
+
+    .cta {
+        font-size: 18px;
+        line-height: 1;
+        padding: 15px 28px;
+
+        @include media-breakpoint-up(md) {
+            font-size: 24px;
+            padding: 18px 86px;
+        }
+    }
 }
