--- a/src/scss/partials/_sections.scss
+++ b/src/scss/partials/_sections.scss
@@ -1,3 +1,3 @@
-@import './sections/getStarted';
+@import './sections/bannerSideBySide';
 @import './sections/twoColumnListComponent';
 @import './sections/heroBanner';
