UI: Generic two column tiles component and Service page updates

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -9,5 +9,5 @@
 @import './custom';
 @import './partials/header';
 @import './partials/footer';
-@import './partials/sections';
+@import './partials/components';
 @import './partials/pages';
