UI: About us section on about page

--- a/src/scss/partials/_components.scss
+++ b/src/scss/partials/_components.scss
@@ -1,3 +1,4 @@
+@import './components/aboutCEO';
 @import './components/headingAndParagraph';
 @import './components/heroBanner';
 @import './components/bannerSideBySide';
