--- a/src/scss/partials/components/_twoColumnList.scss
+++ b/src/scss/partials/components/_twoColumnList.scss
@@ -28,17 +28,32 @@
         .h4 {
             margin-bottom: 24px;
 
+            @include media-breakpoint-down(lg) {
+                text-align: center;
+            }
+
+            @include media-breakpoint-up(lg) {
+                display: flex;
+                align-items: center;
+            }
+
             span {
                 z-index: 1;
+
+                @include media-breakpoint-up(lg) {
+                    padding-right: 1rem;
+                }
             }
 
             &::after {
-                content: '';
-                position: absolute;
-                left: 0;
-                width: 100%;
-                height: 1px;
-                background-color: $grey-1;
+                @include media-breakpoint-up(lg) {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    width: 100%;
+                    height: 1px;
+                    background-color: $grey-1;
+                }
             }
         }
 
