UI: Home page components

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $primary: #DF4F3A;
 $primary-80: rgba(223, 79, 58, 0.8);
 $secondary: #242424;
 $grey-1: #94A1A1;
+$off-white-1: #F9F7F5;
 
 /*Custom breakpoints*/
 $grid-gutter-width: 48px;
