--- a/src/scss/partials/_components.scss
+++ b/src/scss/partials/_components.scss
@@ -1,6 +1,7 @@
 @import './components/aboutCEO';
+@import './components/bannerSideBySide';
 @import './components/headingAndParagraph';
 @import './components/heroBanner';
-@import './components/bannerSideBySide';
+@import './components/quoteCEO';
 @import './components/twoColumnList';
 @import './components/twoColumnTiles';
