UI: Get in touch component

--- a/src/scss/partials/_components.scss
+++ b/src/scss/partials/_components.scss
@@ -1,5 +1,6 @@
 @import './components/aboutCEO';
 @import './components/bannerSideBySide';
+@import './components/getInTouch';
 @import './components/headingAndParagraph';
 @import './components/heroBanner';
 @import './components/quoteCEO';
