UI: Home page testimonials

--- a/src/scss/partials/_components.scss
+++ b/src/scss/partials/_components.scss
@@ -4,5 +4,6 @@
 @import './components/headingAndParagraph';
 @import './components/heroBanner';
 @import './components/quoteCEO';
+@import './components/testimonials';
 @import './components/twoColumnList';
 @import './components/twoColumnTiles';
