UI: why choose us section on home page

--- a/src/scss/partials/_components.scss
+++ b/src/scss/partials/_components.scss
@@ -7,3 +7,4 @@
 @import './components/testimonials';
 @import './components/twoColumnList';
 @import './components/twoColumnTiles';
+@import './components/whyChooseUs';
