--- a/src/scss/partials/components/_testimonials.scss
+++ b/src/scss/partials/components/_testimonials.scss
@@ -23,13 +23,15 @@
             margin-bottom: -73px;
             z-index: 1;
 
+            @include media-breakpoint-down(lg) {
+                display: flex;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
             @include media-breakpoint-up(lg) {
                 margin-left: 45px;
             }
-        }
-
-        &.active {
-            display: flex;
         }
     }
 
