--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -1,7 +1,7 @@
 .App-footer {
 
     .copyright-text {
-        padding: 24px 48px;
+        padding: 24px 0;
     }
 
     .navigation-row > .col {
@@ -20,10 +20,6 @@
     }
 
     .footer-nav-container {
-        @include media-breakpoint-down(lg) {
-            padding: 0 86px;
-        }
-
         > .row {
             gap: 30px;
         }
@@ -45,6 +41,10 @@
         .nav-item {
             gap: 16px;
             font-size: clamp(0.875rem, 0.7985rem + 0.3265vw, 1.125rem);
+
+            p {
+                max-width: 240px;
+            }
         }
     }
 }
