--- a/src/scss/partials/components/_heroBanner.scss
+++ b/src/scss/partials/components/_heroBanner.scss
@@ -19,9 +19,13 @@
     }
 
     .cta {
-        font-size: 18px;
+        font-size: 16px;
         line-height: 1;
         padding: 15px 28px;
+
+        @include media-breakpoint-up(sm) {
+            font-size: 18px;
+        }
 
         @include media-breakpoint-up(md) {
             font-size: 24px;
