--- a/src/scss/partials/components/_getInTouch.scss
+++ b/src/scss/partials/components/_getInTouch.scss
@@ -31,8 +31,12 @@
             gap: 15px;
         }
 
-        img {
+        img.icon {
             max-width: 72px;
+        }
+
+        img.ceo {
+            max-width: 180px;
         }
 
         button {
