UI: Changes for privacy policy page

--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -1,7 +1,11 @@
 .App-footer {
 
-    .copyright-text {
+    .copyright-row {
         padding: 24px 0;
+
+        > .col {
+            gap: 16px;
+        }
     }
 
     .navigation-row > .col {
