UI: Fixes for the data updates by Jon

--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -1,5 +1,4 @@
 .App-footer {
-
     .copyright-row {
         padding: 24px 0;
 
@@ -48,6 +47,10 @@
 
             p {
                 max-width: 240px;
+            }
+
+            .phone-icon {
+                width: 20px;
             }
         }
     }
