--- a/src/scss/partials/components/_testimonials.scss
+++ b/src/scss/partials/components/_testimonials.scss
@@ -17,26 +17,8 @@
         }
     }
 
-    .carousel-item {
-        img {
-            max-width: 146px;
-            margin-bottom: -73px;
-            z-index: 1;
-
-            @include media-breakpoint-down(lg) {
-                display: flex;
-                margin-left: auto;
-                margin-right: auto;
-            }
-
-            @include media-breakpoint-up(lg) {
-                margin-left: 45px;
-            }
-        }
-    }
-
     .user-comment-detail {
-        padding: 82px 30px 64px;
+        padding: 64px 30px;
 
         @include media-breakpoint-up(lg) {
             padding-left: 56px;
