--- a/src/scss/partials/pages/_contact.scss
+++ b/src/scss/partials/pages/_contact.scss
@@ -32,14 +32,14 @@
             border-radius: 24px;
         }
 
-        button {
+        button.submit-btn {
             height: 70px;
             margin-top: 40px;
 
             @include media-breakpoint-down(md) {
                 width: 100%;
             }
-
+    
             @include media-breakpoint-up(md) {
                 font-size: 24px;
                 padding: 0 35px;
